added misssing import

--- a/StockNewsAnalysis.ipynb
+++ b/StockNewsAnalysis.ipynb
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c4ae3c0b",
+   "id": "b0ba7e70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "eb90106f",
+   "id": "40f08dca",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1b2da80f",
+   "id": "0beb1678",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,30 +603,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9b9c8ac1",
+   "execution_count": 25,
+   "id": "ece3a11b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'json' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m json\u001b[38;5;241m.\u001b[39mdumps(final_scores)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'json' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'[{\"company\": \"Remedium Life\", \"pos\": 0.14709999999999998, \"neg\": 0.011, \"comp\": 0.64193}, {\"company\": \"Waaree Renewab.\", \"pos\": 0.12589999999999998, \"neg\": 0.0132, \"comp\": 0.5229100000000001}, {\"company\": \"Dreamfolks Servi\", \"pos\": 0.0803, \"neg\": 0.022500000000000003, \"comp\": 0.25832}, {\"company\": \"Jyoti Resins\", \"pos\": 0.1133, \"neg\": 0.0, \"comp\": 0.548}, {\"company\": \"Esab India\", \"pos\": 0.1206, \"neg\": 0.048, \"comp\": 0.40027999999999997}, {\"company\": \"Fine Organic\", \"pos\": 0.1379, \"neg\": 0.0186, \"comp\": 0.51641}, {\"company\": \"Crest Ventures\", \"pos\": 0.11120000000000001, \"neg\": 0.0317, \"comp\": 0.32514}, {\"company\": \"Shilchar Tech.\", \"pos\": 0.1564, \"neg\": 0.0, \"comp\": 0.63937}, {\"company\": \"West Coast Paper\", \"pos\": 0.10990000000000003, \"neg\": 0.0234, \"comp\": 0.43215000000000003}, {\"company\": \"Share India Sec.\", \"pos\": 0.1781, \"neg\": 0.0312, \"comp\": 0.5324899999999999}, {\"company\": \"K.P. Energy\", \"pos\": 0.1658, \"neg\": 0.021199999999999997, \"comp\": 0.53272}, {\"company\": \"Apar Inds.\", \"pos\": 0.10600000000000001, \"neg\": 0.011300000000000001, \"comp\": 0.44283}, {\"company\": \"Focus Lighting\", \"pos\": 0.13620000000000002, \"neg\": 0.021299999999999996, \"comp\": 0.57445}, {\"company\": \"Ingersoll-Rand\", \"pos\": 0.14850000000000002, \"neg\": 0.0154, \"comp\": 0.54722}, {\"company\": \"Permanent Magnet\", \"pos\": 0.0881, \"neg\": 0.057100000000000005, \"comp\": 0.05958999999999999}, {\"company\": \"Sonata Software\", \"pos\": 0.0703, \"neg\": 0.0367, \"comp\": 0.10408999999999997}, {\"company\": \"Expleo Solutions\", \"pos\": 0.1306, \"neg\": 0.009, \"comp\": 0.53369}, {\"company\": \"Coromandel Inter\", \"pos\": 0.1127, \"neg\": 0.0, \"comp\": 0.45942000000000005}, {\"company\": \"Cigniti Tech.\", \"pos\": 0.12355555555555557, \"neg\": 0.050111111111111106, \"comp\": 0.38812222222222226}, {\"company\": \"Sharda Motor\", \"pos\": 0.134, \"neg\": 0.0078, \"comp\": 0.5531}, {\"company\": \"Avantel\", \"pos\": 0.1619, \"neg\": 0.0131, \"comp\": 0.59174}, {\"company\": \"Seshasayee Paper\", \"pos\": 0.1326, \"neg\": 0.0125, \"comp\": 0.54689}, {\"company\": \"Fineotex Chem\", \"pos\": 0.10955555555555556, \"neg\": 0.005111111111111111, \"comp\": 0.5014777777777778}, {\"company\": \"Solar Industries\", \"pos\": 0.1163, \"neg\": 0.022899999999999997, \"comp\": 0.38793}, {\"company\": \"JTL Industries\", \"pos\": 0.14440000000000003, \"neg\": 0.0067, \"comp\": 0.66511}, {\"company\": \"Network People\", \"pos\": 0.0712, \"neg\": 0.0395, \"comp\": 0.16959000000000005}, {\"company\": \"Asian Paints\", \"pos\": 0.09920000000000001, \"neg\": 0.0225, \"comp\": 0.39306}, {\"company\": \"D-Link India\", \"pos\": 0.0883, \"neg\": 0.0388, \"comp\": 0.23263000000000003}, {\"company\": \"Bayer Crop Sci.\", \"pos\": 0.0177, \"neg\": 0.0924, \"comp\": -0.28576999999999997}, {\"company\": \"Stylam Industrie\", \"pos\": 0.09319999999999999, \"neg\": 0.039, \"comp\": 0.29016}, {\"company\": \"BLS Internat.\", \"pos\": 0.1359, \"neg\": 0.035800000000000005, \"comp\": 0.4796}, {\"company\": \"Gujarat Gas\", \"pos\": 0.09580000000000001, \"neg\": 0.0393, \"comp\": 0.2824}, {\"company\": \"Vinati Organics\", \"pos\": 0.0935, \"neg\": 0.0105, \"comp\": 0.43563}, {\"company\": \"AGI Infra\", \"pos\": 0.1568, \"neg\": 0.0, \"comp\": 0.57352}, {\"company\": \"Glenmark Life\", \"pos\": 0.1493, \"neg\": 0.041499999999999995, \"comp\": 0.53108}, {\"company\": \"Saksoft\", \"pos\": 0.11179999999999998, \"neg\": 0.0, \"comp\": 0.48502}, {\"company\": \"Alkyl Amines\", \"pos\": 0.0971, \"neg\": 0.0, \"comp\": 0.49511000000000005}, {\"company\": \"Ratnamani Metals\", \"pos\": 0.11279999999999998, \"neg\": 0.0329, \"comp\": 0.34619}, {\"company\": \"Polycab India\", \"pos\": 0.1289, \"neg\": 0.0344, \"comp\": 0.45737999999999995}, {\"company\": \"Guj.St.Petronet\", \"pos\": 0.12390000000000001, \"neg\": 0.0361, \"comp\": 0.43633000000000005}, {\"company\": \"Sr.Rayala.Hypo\", \"pos\": NaN, \"neg\": NaN, \"comp\": NaN}, {\"company\": \"Caplin Point Lab\", \"pos\": 0.13479999999999998, \"neg\": 0.0262, \"comp\": 0.57757}, {\"company\": \"Axtel Industries\", \"pos\": 0.10290000000000002, \"neg\": 0.010700000000000001, \"comp\": 0.44745999999999997}, {\"company\": \"Chamanlal Setia\", \"pos\": 0.13175, \"neg\": 0.006, \"comp\": 0.6190875}, {\"company\": \"KEI Industries\", \"pos\": 0.0653, \"neg\": 0.0075, \"comp\": 0.28569}, {\"company\": \"AIA Engineering\", \"pos\": 0.097, \"neg\": 0.0039, \"comp\": 0.45072}, {\"company\": \"Integra Engg.\", \"pos\": 0.11760000000000001, \"neg\": 0.0, \"comp\": 0.59887}, {\"company\": \"Dixon Technolog.\", \"pos\": 0.0875, \"neg\": 0.04359999999999999, \"comp\": 0.21225999999999998}, {\"company\": \"Galaxy Surfact.\", \"pos\": 0.0887, \"neg\": 0.015, \"comp\": 0.34477}, {\"company\": \"Agarwal Indl.\", \"pos\": 0.127, \"neg\": 0.0194, \"comp\": 0.5359}, {\"company\": \"Jash Engineering\", \"pos\": 0.1386, \"neg\": 0.0167, \"comp\": 0.5816800000000001}, {\"company\": \"J B Chem & Pharm\", \"pos\": 0.06340000000000001, \"neg\": 0.0, \"comp\": 0.30627}, {\"company\": \"Marksans Pharma\", \"pos\": 0.15000000000000002, \"neg\": 0.0033, \"comp\": 0.6543}, {\"company\": \"Sona BLW Precis.\", \"pos\": 0.1156, \"neg\": 0.052500000000000005, \"comp\": 0.31943}, {\"company\": \"Route Mobile\", \"pos\": 0.085, \"neg\": 0.0063, \"comp\": 0.37252}, {\"company\": \"P I Industries\", \"pos\": 0.13779999999999998, \"neg\": 0.014100000000000001, \"comp\": 0.48360999999999993}, {\"company\": \"Indigo Paints\", \"pos\": 0.1243, \"neg\": 0.0, \"comp\": 0.5415000000000001}, {\"company\": \"GNA Axles\", \"pos\": 0.11679999999999999, \"neg\": 0.0, \"comp\": 0.5467000000000001}, {\"company\": \"Tega Inds.\", \"pos\": 0.1133, \"neg\": 0.0050999999999999995, \"comp\": 0.49837}, {\"company\": \"ICICI Lombard\", \"pos\": 0.11100000000000002, \"neg\": 0.0129, \"comp\": 0.48139000000000004}, {\"company\": \"Adani Total Gas\", \"pos\": 0.159, \"neg\": 0.0, \"comp\": 0.65906}, {\"company\": \"Hind.Oil Explor.\", \"pos\": 0.17250000000000001, \"neg\": 0.0382, \"comp\": 0.53966}, {\"company\": \"Affle India\", \"pos\": 0.1285, \"neg\": 0.0109, \"comp\": 0.47298}, {\"company\": \"Transpek Inds.\", \"pos\": 0.1691666666666667, \"neg\": 0.0, \"comp\": 0.6010666666666667}, {\"company\": \"Granules India\", \"pos\": 0.0863, \"neg\": 0.05010000000000001, \"comp\": 0.16724}, {\"company\": \"Poly Medicure\", \"pos\": 0.0914, \"neg\": 0.0043, \"comp\": 0.45795000000000013}, {\"company\": \"Vidhi Specialty\", \"pos\": 0.09059999999999999, \"neg\": 0.0204, \"comp\": 0.36634}, {\"company\": \"ADF Foods\", \"pos\": 0.11469999999999998, \"neg\": 0.0522, \"comp\": 0.34294}, {\"company\": \"Latent View\", \"pos\": 0.08120000000000001, \"neg\": 0.030199999999999998, \"comp\": 0.26659}, {\"company\": \"Aarti Drugs\", \"pos\": 0.0878, \"neg\": 0.0099, \"comp\": 0.37265}, {\"company\": \"IOL Chemicals\", \"pos\": 0.10270000000000001, \"neg\": 0.0, \"comp\": 0.48091999999999996}]'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import json\n",
     "json.dumps(final_scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4515e0c7",
+   "id": "024caa4d",
    "metadata": {},
    "outputs": [],
    "source": []
